--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,11 @@ env:
 jobs:
   build:
     name: Build & push new image
-    runs-on: ubuntu-24.04
     permissions:
       contents: read
       packages: write
+    timeout-minutes: 10
+    runs-on: ubuntu-24.04
 
     steps:
       - name: Checkout code
@@ -61,6 +62,7 @@ jobs:
     needs: build
     permissions:
       security-events: write
+    timeout-minutes: 10
     runs-on: ubuntu-24.04
     steps:
       - name: Run Trivy vulnerability scanner
@@ -84,6 +86,7 @@ jobs:
     needs: build
     permissions:
       security-events: write
+    timeout-minutes: 10
     runs-on: ubuntu-24.04
     steps:
       - name: Run Grype vulnerability scanner
